# finrag-backend

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml
backend/: pyproject.toml
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: query_router.py  rag.py  system.py
backend/app/routers/: chat.py  documents.py  reset.py  sections.py
backend/app/services/: azure_di_parser.py  chunker.py  clarification.py  document_processor.py  embedder.py  pdf_parser.py  pinecone_store.py  query_router.py  rag_pipeline.py  supabase_client.py  test_azure_di_parser.py  test_chunker_structured.py  test_document_processor.py
docs/: ARCHITECTURE.md  AUDIT.md  DEPLOYMENT.md  DESIGN.md  FinRAG_Presentation.pptx  QA.md  evaluation.ipynb  generate_presentation.py
supabase/: migration.sql
supabase/.temp/: pooler-url  project-ref
